--- a/src/components/cart/Cart.css
+++ b/src/components/cart/Cart.css
@@ -1,20 +1,17 @@
 .Cart {
-    text-align: center;
-    clear: both;
+  text-align: center;
+  clear: both;
+  padding-top: 30px;
+  min-height: 500px;
 }
 
 .Cart-header {
-    background-color: #222;
-    height: 150px;
-    padding: 20px;
-    color: white;
+  background-color: #222;
+  height: 150px;
+  padding: 20px;
+  color: white;
 }
 
 .Cart-intro {
-    font-size: large;
-}
-
-@keyframes App-logo-spin {
-    from { transform: rotate(0deg); }
-    to { transform: rotate(360deg); }
+  font-size: large;
 }
